# fmod-rs

./: .gitignore  Cargo.toml  docgen.kdl  rustdoc.css  x.nu
.github/workflows/: release.yml
crates/fmod-build-helper/: Cargo.toml  README.md
crates/fmod-build-helper/src/: lib.rs  transpile.rs  win.rs
crates/fmod-core-sys/: Cargo.toml  README.md  build.rs
crates/fmod-fsbank-sys/: Cargo.toml  README.md  build.rs
crates/fmod-rs/: Cargo.toml  build.rs  rustdoc.css
crates/fmod-rs/src/: error.rs  handle.rs  lib.rs  macros.rs  shims.rs  utils.rs
crates/fmod-rs/src/core/: error.rs  handle.rs  mod.rs
crates/fmod-rs/src/core/channel/: general.rs
crates/fmod-rs/src/core/channel_control/: general.rs
crates/fmod-rs/src/core/channel_group/: general.rs
crates/fmod-rs/src/core/common/: debug.rs  debug_initialize.md  file.rs  file_getdiskbusy.md  file_setdiskbusy.md  general.rs  memory.rs  memory_getstats.md
crates/fmod-rs/src/core/dsp/effect/: parameters.rs
crates/fmod-rs/src/core/dsp_connection/: general.rs
crates/fmod-rs/src/core/sound/: data.rs  format.rs  ios.rs  synchronization.rs
crates/fmod-rs/src/core/system/: creation.rs  general.rs  lifetime.rs  network.rs  plugin.rs  setup.rs
crates/fmod-rs/src/macros/: class.rs  flags.rs  strict_enum.rs  structs.rs  typedef_enum.rs
crates/fmod-rs/src/studio/: mod.rs
crates/fmod-studio-sys/: Cargo.toml  README.md  build.rs
examples/: Cargo.toml
examples/examples/: 3d.rs  channel_groups.rs  convolution_reverb.rs  gapless_playback.rs  granular_synth.rs
examples/src/: lib.rs
