[package]
name = "fmod-studio-sys"
version = "1.0.2"
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE.txt"
links = "fmodstudio"

description = "FMOD Studio bindings"
documentation = "https://www.fmod.com/docs/api/studio-api.html"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive-audio"]
categories = ["external-ffi-bindings", "game-development", "multimedia::audio"]

[dependencies]
fmod-core-sys.workspace = true

[build-dependencies]
build-rs.workspace = true
fmod-build-helper.workspace = true
